package main

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"helixflow/monitoring"
)

// MonitoringServiceServer implements the gRPC MonitoringService
type MonitoringServiceServer struct {
	monitoring.UnimplementedMonitoringServiceServer
}

// NewMonitoringServiceServer creates a new monitoring service server
func NewMonitoringServiceServer() *MonitoringServiceServer {
	return &MonitoringServiceServer{}
}

// GetSystemMetrics retrieves system metrics
func (s *MonitoringServiceServer) GetSystemMetrics(ctx context.Context, req *monitoring.GetSystemMetricsRequest) (*monitoring.GetSystemMetricsResponse, error) {
	// Mock system metrics
	metrics := []*monitoring.MetricData{
		{
			Name:      "cpu_usage",
			Value:     45.5,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "percent",
		},
		{
			Name:      "memory_usage",
			Value:     67.2,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "percent",
		},
		{
			Name:      "disk_usage",
			Value:     78.9,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "percent",
		},
	}

	return &monitoring.GetSystemMetricsResponse{
		Success: true,
		Metrics: metrics,
		Message: "System metrics retrieved successfully",
	}, nil
}

// GetServiceMetrics retrieves service-specific metrics
func (s *MonitoringServiceServer) GetServiceMetrics(ctx context.Context, req *monitoring.GetServiceMetricsRequest) (*monitoring.GetServiceMetricsResponse, error) {
	// Mock service metrics
	metrics := []*monitoring.MetricData{
		{
			Name:      "request_rate",
			Value:     125.5,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "requests_per_second",
		},
		{
			Name:      "error_rate",
			Value:     0.02,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "percent",
		},
	}

	serviceInfo := &monitoring.ServiceInfo{
		Name:         req.ServiceName,
		Version:      "1.0.0",
		Status:       "healthy",
		ReplicaCount: 3,
		Endpoints:    []string{"/health", "/metrics", "/api/v1"},
	}

	return &monitoring.GetServiceMetricsResponse{
		Success:     true,
		Metrics:     metrics,
		ServiceInfo: serviceInfo,
		Message:     "Service metrics retrieved successfully",
	}, nil
}

// GetGPUMetrics retrieves GPU-specific metrics
func (s *MonitoringServiceServer) GetGPUMetrics(ctx context.Context, req *monitoring.GetGPUMetricsRequest) (*monitoring.GetGPUMetricsResponse, error) {
	// Mock GPU metrics
	gpuMetrics := []*monitoring.GPUMetricData{
		{
			GpuId:   0,
			GpuName: "NVIDIA RTX 4090",
			Metrics: []*monitoring.MetricData{
				{
					Name:      "memory_usage",
					Value:     8192,
					Timestamp: time.Now().Format(time.RFC3339),
					Unit:      "megabytes",
				},
				{
					Name:      "utilization",
					Value:     75.5,
					Timestamp: time.Now().Format(time.RFC3339),
					Unit:      "percent",
				},
				{
					Name:      "temperature",
					Value:     68.0,
					Timestamp: time.Now().Format(time.RFC3339),
					Unit:      "celsius",
				},
			},
			Timestamp: time.Now().Format(time.RFC3339),
		},
	}

	return &monitoring.GetGPUMetricsResponse{
		Success:    true,
		GpuMetrics: gpuMetrics,
		Message:    "GPU metrics retrieved successfully",
	}, nil
}

// GetApplicationMetrics retrieves application-specific metrics
func (s *MonitoringServiceServer) GetApplicationMetrics(ctx context.Context, req *monitoring.GetApplicationMetricsRequest) (*monitoring.GetApplicationMetricsResponse, error) {
	// Mock application metrics
	metrics := []*monitoring.MetricData{
		{
			Name:      "active_users",
			Value:     1247,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "count",
		},
		{
			Name:      "inference_requests",
			Value:     5432,
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "count",
		},
	}

	appInfo := &monitoring.ApplicationInfo{
		Name:        req.ApplicationName,
		Version:     "1.0.0",
		Environment: "production",
		Services:    []string{"api-gateway", "auth-service", "inference-pool"},
	}

	return &monitoring.GetApplicationMetricsResponse{
		Success: true,
		Metrics: metrics,
		AppInfo: appInfo,
		Message: "Application metrics retrieved successfully",
	}, nil
}

// CreateAlertRule creates a new alert rule
func (s *MonitoringServiceServer) CreateAlertRule(ctx context.Context, req *monitoring.CreateAlertRuleRequest) (*monitoring.CreateAlertRuleResponse, error) {
	// Validate request
	if req.Name == "" || req.MetricName == "" || req.Condition == "" {
		return nil, status.Error(codes.InvalidArgument, "name, metric_name, and condition are required")
	}

	// Mock alert rule creation
	alertRule := &monitoring.AlertRule{
		Id:                   fmt.Sprintf("rule_%d", time.Now().UnixNano()),
		Name:                 req.Name,
		Description:          req.Description,
		MetricName:           req.MetricName,
		Condition:            req.Condition,
		Threshold:            req.Threshold,
		DurationSeconds:      req.DurationSeconds,
		Severity:             req.Severity,
		NotificationChannels: req.NotificationChannels,
		Labels:               req.Labels,
		Enabled:              req.Enabled,
		CreatedAt:            time.Now().Format(time.RFC3339),
		UpdatedAt:            time.Now().Format(time.RFC3339),
	}

	return &monitoring.CreateAlertRuleResponse{
		Success:   true,
		Message:   "Alert rule created successfully",
		AlertRule: alertRule,
	}, nil
}

// UpdateAlertRule updates an existing alert rule
func (s *MonitoringServiceServer) UpdateAlertRule(ctx context.Context, req *monitoring.UpdateAlertRuleRequest) (*monitoring.UpdateAlertRuleResponse, error) {
	// Mock alert rule update
	alertRule := &monitoring.AlertRule{
		Id:                   req.RuleId,
		Name:                 req.Name,
		Description:          req.Description,
		MetricName:           req.MetricName,
		Condition:            req.Condition,
		Threshold:            req.Threshold,
		DurationSeconds:      req.DurationSeconds,
		Severity:             req.Severity,
		NotificationChannels: req.NotificationChannels,
		Labels:               req.Labels,
		Enabled:              req.Enabled,
		UpdatedAt:            time.Now().Format(time.RFC3339),
	}

	return &monitoring.UpdateAlertRuleResponse{
		Success:   true,
		Message:   "Alert rule updated successfully",
		AlertRule: alertRule,
	}, nil
}

// DeleteAlertRule deletes an alert rule
func (s *MonitoringServiceServer) DeleteAlertRule(ctx context.Context, req *monitoring.DeleteAlertRuleRequest) (*monitoring.DeleteAlertRuleResponse, error) {
	// Mock alert rule deletion
	return &monitoring.DeleteAlertRuleResponse{
		Success: true,
		Message: "Alert rule deleted successfully",
	}, nil
}

// ListAlertRules lists all alert rules
func (s *MonitoringServiceServer) ListAlertRules(ctx context.Context, req *monitoring.ListAlertRulesRequest) (*monitoring.ListAlertRulesResponse, error) {
	// Mock alert rules list
	alertRules := []*monitoring.AlertRule{
		{
			Id:          "rule_1",
			Name:        "High CPU Usage",
			Description: "Alert when CPU usage exceeds 80%",
			MetricName:  "cpu_usage",
			Condition:   ">",
			Threshold:   80.0,
			Severity:    monitoring.AlertSeverity_ALERT_SEVERITY_WARNING,
			Enabled:     true,
			CreatedAt:   time.Now().Add(-time.Hour * 24).Format(time.RFC3339),
		},
		{
			Id:          "rule_2",
			Name:        "GPU Memory High",
			Description: "Alert when GPU memory exceeds 90%",
			MetricName:  "gpu_memory_usage",
			Condition:   ">",
			Threshold:   90.0,
			Severity:    monitoring.AlertSeverity_ALERT_SEVERITY_CRITICAL,
			Enabled:     true,
			CreatedAt:   time.Now().Add(-time.Hour * 12).Format(time.RFC3339),
		},
	}

	return &monitoring.ListAlertRulesResponse{
		Success:    true,
		AlertRules: alertRules,
		TotalCount: int32(len(alertRules)),
	}, nil
}

// GetAlerts retrieves alerts
func (s *MonitoringServiceServer) GetAlerts(ctx context.Context, req *monitoring.GetAlertsRequest) (*monitoring.GetAlertsResponse, error) {
	// Mock alerts list
	alerts := []*monitoring.Alert{
		{
			Id:          "alert_1",
			RuleId:      "rule_1",
			RuleName:    "High CPU Usage",
			Description: "CPU usage has exceeded 80% threshold",
			Severity:    monitoring.AlertSeverity_ALERT_SEVERITY_WARNING,
			Status:      "active",
			StartedAt:   time.Now().Add(-time.Minute * 15).Format(time.RFC3339),
			TriggerMetrics: []*monitoring.MetricData{
				{
					Name:      "cpu_usage",
					Value:     85.2,
					Timestamp: time.Now().Add(-time.Minute * 15).Format(time.RFC3339),
					Unit:      "percent",
				},
			},
		},
	}

	return &monitoring.GetAlertsResponse{
		Success:    true,
		Alerts:     alerts,
		TotalCount: int32(len(alerts)),
	}, nil
}

// AcknowledgeAlert acknowledges an alert
func (s *MonitoringServiceServer) AcknowledgeAlert(ctx context.Context, req *monitoring.AcknowledgeAlertRequest) (*monitoring.AcknowledgeAlertResponse, error) {
	// Mock alert acknowledgment
	return &monitoring.AcknowledgeAlertResponse{
		Success: true,
		Message: "Alert acknowledged successfully",
	}, nil
}

// GetScalingRecommendations provides scaling recommendations
func (s *MonitoringServiceServer) GetScalingRecommendations(ctx context.Context, req *monitoring.GetScalingRecommendationsRequest) (*monitoring.GetScalingRecommendationsResponse, error) {
	// Mock scaling recommendations
	recommendations := []*monitoring.ScalingRecommendation{
		{
			ServiceName:     req.ServiceName,
			Action:          monitoring.ScalingAction_SCALING_ACTION_SCALE_UP,
			TargetReplicas:  5,
			Reason:          "High CPU utilization detected",
			ConfidenceScore: 0.85,
			EstimatedTime:   time.Now().Add(time.Minute * 10).Format(time.RFC3339),
		},
	}

	predictionMetrics := &monitoring.PredictionMetrics{
		CurrentLoad:             75.5,
		PredictedLoad:           92.3,
		ConfidenceIntervalLower: 88.1,
		ConfidenceIntervalUpper: 96.5,
	}

	return &monitoring.GetScalingRecommendationsResponse{
		Success:           true,
		Recommendations:   recommendations,
		PredictionMetrics: predictionMetrics,
		Message:           "Scaling recommendations generated successfully",
	}, nil
}

// StreamMetrics streams real-time metrics
func (s *MonitoringServiceServer) StreamMetrics(req *monitoring.StreamMetricsRequest, stream monitoring.MonitoringService_StreamMetricsServer) error {
	// Mock streaming metrics
	for i := 0; i < 10; i++ {
		metric := &monitoring.MetricData{
			Name:      "cpu_usage",
			Value:     45.0 + float64(i%20),
			Timestamp: time.Now().Format(time.RFC3339),
			Unit:      "percent",
		}

		if err := stream.Send(metric); err != nil {
			return err
		}

		time.Sleep(time.Second * time.Duration(req.IntervalSeconds))
	}

	return nil
}
